--- a/src/posts/2021-02-16-click-event-target/event-target-info.mdx
+++ b/src/posts/2021-02-16-click-event-target/event-target-info.mdx
@@ -3,4 +3,4 @@
 `event.target` refers to the specific element that the user clicked on. In this case, it could be anything in the document, such as a `div`
 or a `button`.
 
-Don’t confuse it with `event.currentTarget`, which refers to the element that the event handler was attached to.
+Don’t confuse it with `event.currentTarget`, [which refers to the element that the event handler was attached to](https://developer.mozilla.org/en-US/docs/Web/API/Event/currentTarget).
